--- a/MetalMarketPlace/appsettings.json
+++ b/MetalMarketPlace/appsettings.json
@@ -6,33 +6,33 @@
     }
   },
   "TwitterConfiguration": {
-    "AppId": "Suxam1863gqNU4m4r1Xydb28Q",
-    "AppSecret": "R5RqKMOs7ZTYxfF4NF2eTQ4drDHewyfAZx6FD5xwkzCFSzob5M"
+    "AppId": "",
+    "AppSecret": ""
   },
   "FacebookConfiguration": {
-    "AppId": "2334817276730532",
-    "AppSecret": "50336fefd88b875a590e66d5f1aa7bc5"
+    "AppId": "",
+    "AppSecret": ""
   },
   "GoogleConfiguration": {
-    "AppId": "58596479700-kt62ebshpkll29qj64h3104een8k4vle.apps.googleusercontent.com",
-    "AppSecret": "9CuyhxD79GImyGEEM6BueP2m"
+    "AppId": "",
+    "AppSecret": ""
   },
   "MicrosoftConfiguration": {
-    "AppId": "240ddbcb-5d94-4fe7-a333-240ae1d53802",
-    "AppSecret": "wzMHzpZMl6SFETMDefa[ncKHcB?52=0_"
+    "AppId": "",
+    "AppSecret": ""
   },
   "EmailConfiguration": {
     "SmtpServer": "mail.tiptec.be",
     "SmtpPort": 587,
-    "SmtpUsername": "verification@tiptec.be",
-    "SmtpPassword": "cloudcollect"
+    "SmtpUsername": "",
+    "SmtpPassword": ""
   },
   "RecaptchaSettings": {
-    "SecretKey": "6Le_qbAUAAAAADDVZZ7Ej-QjoTSsIHUELV9lvvw6",
-    "SiteKey": "6Le_qbAUAAAAAC4ZTlmsw8OMv6gZUJfUMzPwn2f3",
+    "SecretKey": "",
+    "SiteKey": "",
     "Version": "v3"
   },
   "ConnectionStrings": {
-    "MyDbConnection": "Data Source=metalmarketplace.database.windows.net;Initial Catalog=MetalMarketPlace;User ID=Kookpot;Password=WoWFFXIV1?;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "MyDbConnection": ""
   }
 }
